# Raytracing

./: .gitignore  CMakeLists.txt  Camera.hpp  Geometry.hpp  Light.cpp  Light.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  Perspective.cpp  Perspective.hpp  README.md  Ray.cpp  Ray.hpp  Scene.cpp  Scene.hpp  Surface.cpp  Surface.hpp  build.sh  main.cpp
